# pixelopolis

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README  README.md  active.sh  build.sh  build_wasm.sh  deploy_heroku.sh  example.css  example.lang  gdb.sh  run.sh  test.css
cmake/: exec.cmake  lib.cmake  parser.cmake  tests.cmake  wasm.cmake
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js  structure.rst
docs/_sources/: index.rst.txt
docs/_static/: alabaster.css
docs/articles/: hello-world.html  index.html  index.rst  installation.html  structure.html
docs/images/: structure.xcf
docs/schema/: index.rst  properties.rst  rules.rst
docsrc/: Makefile  conf.py  css_options.py  index.rst
docsrc/articles/: hello-world.rst  installation.rst  structure.rst
examples/: complex.css  complex.scss  cone.css  cube.css  cylinder.css  dome.css  fillers.css  pyramid.css  random.css  rotate.css  series.css  textures.css  triangle.css
examples/basic/: cone.css  cube.css  cylinder.css  dome.css  pyramid.css  triangle.css
examples/complex/: complex.css  complex.scss  mosque.css  mosque.scss  village.css
examples/containers/: bsp-tree.css  fillers.css  series.css  square-fence.css  union.scss
examples/textures/: align.css  bricks.css  filler.css  floor-align.css  points.css  series.css  textures.css  tiles.css
examples/tutorial/: containers.scss  hello-cube.scss  nested-objects.scss  textures.scss
include/: _css_draw.h  _draw_builder.h  angle_iter.h  basic.h  css.h  css_debug.h  css_draw.h  css_eval.h  css_func.h  draw.h  draw_builder.h  draw_poly.h  draw_shape.h  hash.h  img.h  normal_map.h
include/img/: create.h  destroy.h  ops.h  write.h
include/pixelopolis/: angle_iter.h  basic.h  css.h  css_debug.h  css_draw.h  css_eval.h  css_func.h  css_texture_draw.h  draw.h  draw_builder.h  draw_builder_common.h  draw_builder_texture.h  draw_builder_world.h  draw_poly.h  hash.h  img.h  memory.h  normal_map.h  texture_draw.h  world_draw.h
lib_include/: _css_draw.h  _draw_builder.h
lib_include/pixelopolis/: _cos_sin_atan.h  _css_draw.h  _css_texture_draw.h  _draw_builder.h  _draw_builder_texture.h  _draw_builder_texture_part.h  _draw_builder_utils.h  _draw_builder_world.h
main/: pixelopolis-normal-map.c  pixelopolis.c  wasm.c
src/: angle_iter.c  css.h  css.l  css.y  css_debug.c  css_draw.c  css_eval.c  css_free.c  css_func.c  css_make_new_rule.c  draw.c  draw_builder.c  draw_builder_texture.c  draw_builder_world.c  draw_poly.c  draw_shape.c  hash.c  img.c  main.c  main.rs  memory.c  normal_map.c  royal_image.rs  royal_pixel.rs
src-c/: main.c
src/css/: debug.c  eval.c  free.c  func.c  make_new_rule.c
src/css_draw/: base.c  board_obj.c  component.c  cone.c  cube.c  cylinder.c  dome.c  pyramid.c  series.c  square_fence.c  texture._c  texture.c  triangle.c  void.c
src/css_texture_draw/: component.c  default.c  fill.c  part.c  void.c
src/draw_builder/: basic.c  board_obj.c  bsp_tree.c  cone.c  cube.c  cylinder.c  dome.c  draw_obj.c  filler.c  floor.c  pyramid.c  series.c  series_utils.c  square_fence.c  texture.c  triangle.c  union.c  utils.c  void.c  wall._c  wall.c
src/draw_builder_texture/: align.c  build.c  default.c  justify.c  part.c  series.c  tex_obj.c  tiles.c  utils.c
src/draw_builder_utils/: utils.c
src/draw_builder_world/: basic.c  board_obj.c  bsp_tree.c  cone.c  cube.c  cylinder.c  dome.c  draw_obj.c  filler.c  floor._c  (+9 more)
tests/: main.c  suites.h  test_css_eval.c  test_hash.c  test_memory.c
wasm/: package-lock.json  package.json  pixelopolis.js  pixelopolis.wasm  test.html  webpack.config.js
web/: test.css  web.py
(+141 files in other folders)
